--- a/index.html
+++ b/index.html
@@ -52,7 +52,20 @@
     </section>
 
     <section class="create-your-rocket">
-        <h1>create your rocket</h1>
+        <div class="floating-box">
+            <img class="planet-create-section" src="images/earth.png" alt="">
+            <h2>Go to planet Earth</h2>
+        </div>
+        <div class="floating-box">
+            <img class="planet-create-section" src="images/earth.png" alt="">
+            <h2>Go to planet Venus</h2>
+            <p>Dummy text. Dummy text. Dummy text. </p>
+        </div>
+        <div class="floating-box">
+            <img class="planet-create-section" src="images/earth.png" alt="">
+            <h2>Go to planet Mars</h2>
+            <p>Dummy text. Dummy text. Dummy text. </p>
+        </div>
     </section>
 
 
