--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <div class="floating-box">
             <img class="planet-create-section" src="images/earth.png" alt="">
             <h2>Go to planet Earth</h2>
+            <p>Dummy text. Dummy text. Dummy text. </p>
         </div>
         <div class="floating-box">
             <img class="planet-create-section" src="images/earth.png" alt="">
