--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
         </div>
     </section>
 
+    <footer class="footer">
+        <div id="logo">Super Rocket</div>
+    </footer>
 
 
 </body>
